# calcl

./: CMakeLists.txt  README.md  todo.org
lib/: abc.al
src/: main.cpp
src/calcl/: calcl.hpp  plugin.cpp  plugin.hpp  read.cpp  read.hpp  repl.cpp  repl.hpp
src/calcl/ops/: calc.cpp  calc.hpp  calcl.cpp  calcl.hpp
test/: run.al  run_linked.al
